// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render an "h2" with the "large" font size 1`] = `
.c0 {
  font-size: 3.2rem;
  color: white;
  font-weight: 600;
  font-family: 'Raleway',sans-serif;
}

@media (max-width:768px) {
  .c0 {
    font-size: 4.0rem;
  }
}

<h2
  class="c0"
  color="white"
>
  Title Example
</h2>
`;

exports[`<Heading /> should render an "h3" with the "medium" font size 1`] = `
.c0 {
  font-size: 2.4rem;
  color: white;
  font-weight: 600;
  font-family: 'Raleway',sans-serif;
}

@media (max-width:768px) {
  .c0 {
    font-size: 4.0rem;
  }
}

<h3
  class="c0"
  color="white"
>
  Title Example
</h3>
`;

exports[`<Heading /> should render an "h4" with the "small" font size 1`] = `
.c0 {
  font-size: 2.4rem;
  color: white;
  font-weight: 600;
  font-family: 'Raleway',sans-serif;
}

@media (max-width:768px) {
  .c0 {
    font-size: 4.0rem;
  }
}

<h4
  class="c0"
  color="white"
>
  Title Example
</h4>
`;

exports[`<Heading /> should render heading with "xlarge" font size when screen size is max 768px 1`] = `
.c0 {
  font-size: 5.6rem;
  color: white;
  font-weight: 600;
  font-family: 'Raleway',sans-serif;
}

@media (max-width:768px) {
  .c0 {
    font-size: 4.0rem;
  }
}

<h1
  class="c0"
  color="white"
>
  Title Example
</h1>
`;

exports[`<Heading /> should render title with default styles 1`] = `
.c0 {
  font-size: 5.6rem;
  color: white;
  font-weight: 600;
  font-family: 'Raleway',sans-serif;
}

@media (max-width:768px) {
  .c0 {
    font-size: 4.0rem;
  }
}

<h1
  class="c0"
  color="white"
>
  Title Example
</h1>
`;
